--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "nodemon --exec ts-node --files index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
+    "postinstall": "prisma generate && npm run build",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:studio": "prisma studio"
